cmake_minimum_required(VERSION 3.20)
project(PlugUDP LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_library(PlugUDP SHARED PlugUDP.cpp)

target_include_directories(PlugUDP PUBLIC ${CMAKE_SOURCE_DIR})

set_target_properties(PlugUDP PROPERTIES OUTPUT_NAME PlugUDP)
